BUG-FIX EmployeeFileReaderTest.java